# skdag

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.rst  appveyor.yml  environment.yml  requirements.txt  requirements_doc.txt  requirements_test.txt  setup.cfg  setup.py
doc/: api.rst  conf.py  index.rst  quick_start.rst  user_guide.rst
doc/_static/css/: project-template.css
examples/: plot_classifier.py  plot_template.py  plot_transformer.py
img/: skdag-dark.kra  skdag.kra
skdag/: __init__.py  dag.py  exceptions.py
skdag/dag/: __init__.py  _builder.py  _dag.py  _render.py  _utils.py  builder.py  dag.py  renderer.py
skdag/dag/tests/: test_builder.py  test_dag.py  utils.py
skdag/tests/: test_dag.py
skltemplate/: __init__.py  _template.py
skltemplate/tests/: test_common.py  test_template.py
