[metadata]
description-file = README.rst

[aliases]
test = pytest

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = .
addopts =
    -s
    --doctest-modules
    --doctest-glob="*.rst"
    --cov=skdag
    --ignore setup.py
    --ignore doc/_build
    --ignore doc/_templates
    --no-cov-on-fail
