[metadata]
description-file = README.rst

[aliases]
test = pytest

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = .
addopts =
    -s
    --doctest-modules
    --doctest-glob="*.rst"
    --cov=skdag
    --ignore setup.py
    --ignore doc/_build
    --ignore doc/_templates
    --no-cov-on-fail

[coverage:run]
branch = True
source = skdag
include = */skdag/*
omit =
    */tests/*
    *_test.py
    test_*.py
    */setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    if self.verbose:
show_missing = True

